# pathfinder-bot

./: CMakeLists_Termux.txt  main_cli.cpp  pathfinder.cpp  settings.gradle.kts
.github/workflows/: build.yml  final_bot.yml  main.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  injected_mod.cpp  jni_bridge.cpp  scanner.cpp  scanner.hpp
app/src/main/java/com/pathfinder/gd/: BotAccessibilityService.kt  BotExecutionStore.kt  BotPlanner.kt  LevelScriptModels.kt  MainActivity.kt  PathfinderEngine.kt  PathfinderModels.kt  PhysicsModels.kt  TrajectoryView.kt
app/src/main/res/layout/: activity_main.xml
pathfinder-main/pathfinder-main/gd-sim/: CMakeLists.txt
pathfinder-main/pathfinder-main/gd-sim/src/: Level.cpp
pathfinder-main/pathfinder-main/gd-sim/src/test/: test.cpp
pathfinder-main/pathfinder-main/src/: pathfinder_android.cpp
